# puzzles

./: Cargo.toml  pyproject.toml
src/: lib.rs  max_subarray.rs
src/puzzles/: capital_after_vowel.py  rotate_tetromino.py
src/puzzles_py/: all_unique.py  capital_after_vowel.py  count_and_say.py  least_numbers_after_k_removals.py  max_points.py  max_subarray_sum_circular.py  number_of_good_paths.py  rotate_tetromino.py  sum3_closest.py  swap_nodes_in_pairs.py  swap_nodes_in_pairs.rs
tests/: test_puzzles.py
